objects/Case__x.object
<CustomObject>
    <externalDataSource>BMX_EXTERNAL</externalDataSource>
    <externalName>Case</externalName>
    <fields>
        <fullName>ANALYZE_Name_c__c</fullName>
        <externalDeveloperName>ANALYZE_Name__c</externalDeveloperName>
        <label>ANALYZE Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ANALYZE_c__c</fullName>
        <externalDeveloperName>ANALYZE__c</externalDeveloperName>
        <label>ANALYZE</label>
        <length>18</length>
        <referenceTo>CodeGroup_c__x</referenceTo>
        <relationshipLabel>Case</relationshipLabel>
        <relationshipName>Case1</relationshipName>
        <type>ExternalLookup</type>
    </fields>
    <fields>
        <fullName>ATC_c__c</fullName>
        <externalDeveloperName>ATC__c</externalDeveloperName>
        <inlineHelpText>Answer To Customer (ATC)
Email is sent to the customer with the text in this ATC if theses 3 conditions are met:
- Case Status is Closed
-“ATC” is populated
-“Send ATC to Customer” is checked</inlineHelpText>
        <label>Answer To Customer (ATC)</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AccountId__c</fullName>
        <externalDeveloperName>AccountId</externalDeveloperName>
        <label>Account ID</label>
        <length>18</length>
        <referenceTo>Account__x</referenceTo>
        <relationshipLabel>Case</relationshipLabel>
        <relationshipName>Case</relationshipName>
        <type>ExternalLookup</type>
    </fields>
    <fields>
        <fullName>ActionCode_c__c</fullName>
        <externalDeveloperName>ActionCode__c</externalDeveloperName>
        <label>Action Code</label>
        <length>18</length>
        <referenceTo>CodeGroup_c__x</referenceTo>
        <relationshipLabel>Case</relationshipLabel>
        <relationshipName>Case</relationshipName>
        <type>ExternalLookup</type>
    </fields>
    <fields>
        <fullName>Action_Code_Name_c__c</fullName>
        <externalDeveloperName>Action_Code_Name__c</externalDeveloperName>
        <label>Action Code Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Angry_c__c</fullName>
        <externalDeveloperName>Angry__c</externalDeveloperName>
        <label>Angry</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AssetAccountNOTCaseAccount_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>AssetAccountNOTCaseAccount__c</externalDeveloperName>
        <label>Asset Account NOT Case Account?</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AssetId__c</fullName>
        <externalDeveloperName>AssetId</externalDeveloperName>
        <inlineHelpText>If the Case concerns an Asset, reference here the Equipment. If the Equipment is not known, reference the System.</inlineHelpText>
        <label>Asset ID</label>
        <length>18</length>
        <referenceTo>Asset__x</referenceTo>
        <relationshipLabel>Case</relationshipLabel>
        <relationshipName>Case</relationshipName>
        <type>ExternalLookup</type>
    </fields>
    <fields>
        <fullName>AssetRecordType_c__c</fullName>
        <externalDeveloperName>AssetRecordType__c</externalDeveloperName>
        <label>Asset Record Type</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Asset_Name_c__c</fullName>
        <externalDeveloperName>Asset_Name__c</externalDeveloperName>
        <label>Asset Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BatchExpDate_c__c</fullName>
        <externalDeveloperName>BatchExpDate__c</externalDeveloperName>
        <label>Batch Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BatchNumberStatusIcon_c__c</fullName>
        <externalDeveloperName>BatchNumberStatusIcon__c</externalDeveloperName>
        <label>Batch Number Status</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BatchNumberStatus_c__c</fullName>
        <externalDeveloperName>BatchNumberStatus__c</externalDeveloperName>
        <label>Batch Number Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NotChecked</fullName>
                    <label>Not checked</label>
                </value>
                <value>
                    <fullName>CheckedValid</fullName>
                    <label>Checked - Valid</label>
                </value>
                <value>
                    <fullName>CheckedNotValid</fullName>
                    <label>Checked - Not Valid</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BatchNumberUnknown_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>BatchNumberUnknown__c</externalDeveloperName>
        <inlineHelpText>If  “Batch Number Unknown” is checked, it is not mandatory to fill the "Batch Number" on a Case referencing a Reagent product</inlineHelpText>
        <label>Batch Number Unknown</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BatchNumber_c__c</fullName>
        <externalDeveloperName>BatchNumber__c</externalDeveloperName>
        <inlineHelpText>Mandatory for reagent products. Except if “Batch Number unknown” is checked</inlineHelpText>
        <label>Batch Number (Reagent)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillTo_c__c</fullName>
        <externalDeveloperName>BillTo__c</externalDeveloperName>
        <label>Bill To</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BusinessHoursId__c</fullName>
        <externalDeveloperName>BusinessHoursId</externalDeveloperName>
        <label>Business Hours ID</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CVM_OtherInfo_c__c</fullName>
        <externalDeveloperName>CVM_OtherInfo__c</externalDeveloperName>
        <label>CVM &amp; OtherInfo</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CVM_c__c</fullName>
        <externalDeveloperName>CVM__c</externalDeveloperName>
        <label>CVM</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CaseHasServiceTasks_c__c</fullName>
        <externalDeveloperName>CaseHasServiceTasks__c</externalDeveloperName>
        <label>Case Has Service Tasks</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No Service Task</fullName>
                </value>
                <value>
                    <fullName>Service Tasks Open</fullName>
                </value>
                <value>
                    <fullName>Service Tasks Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CaseHasServiceTasks_icon_c__c</fullName>
        <externalDeveloperName>CaseHasServiceTasks_icon__c</externalDeveloperName>
        <inlineHelpText>Dash: Case has no related Case Service Task
Orange: Case has at least 1 Open Case Service Task
Green: Case has all its Case Service Tasks Closed</inlineHelpText>
        <label>STask</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CaseHasWO_c__c</fullName>
        <externalDeveloperName>CaseHasWO__c</externalDeveloperName>
        <label>Case Has WO</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No WO</fullName>
                </value>
                <value>
                    <fullName>WO Open</fullName>
                </value>
                <value>
                    <fullName>WO Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CaseHasWO_icon_c__c</fullName>
        <externalDeveloperName>CaseHasWO_icon__c</externalDeveloperName>
        <inlineHelpText>Dash: Case has no related WO
Orange: Case has at least 1 Open WO
Green: Case has all its WO Closed</inlineHelpText>
        <label>WO</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CaseNumber__c</fullName>
        <externalDeveloperName>CaseNumber</externalDeveloperName>
        <label>Case Number</label>
        <length>30</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CaseNumber_c__c</fullName>
        <externalDeveloperName>CaseNumber__c</externalDeveloperName>
        <label>SAP Case Number</label>
        <length>12</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_First_Closed_Date_c__c</fullName>
        <externalDeveloperName>Case_First_Closed_Date__c</externalDeveloperName>
        <label>Case First Closed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Case_Owner_Name_c__c</fullName>
        <externalDeveloperName>Case_Owner_Name__c</externalDeveloperName>
        <label>Case Owner Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CatalogProfile_c__c</fullName>
        <externalDeveloperName>CatalogProfile__c</externalDeveloperName>
        <label>Catalog Profile</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>$$-OSS-SM</fullName>
                    <label>$$-OSS-SM - R/3 Notifications</label>
                </value>
                <value>
                    <fullName>000000001</fullName>
                    <label>000000001 - General Catalog Profile</label>
                </value>
                <value>
                    <fullName>999</fullName>
                    <label>999 - NO DETERMIDED</label>
                </value>
                <value>
                    <fullName>A91</fullName>
                    <label>A91 - CONNECT-UP</label>
                </value>
                <value>
                    <fullName>A92</fullName>
                    <label>A92 - EPISEQ SOFTWARE</label>
                </value>
                <value>
                    <fullName>A94</fullName>
                    <label>A94 - EVISIGHT COMPACT APPLICATION</label>
                </value>
                <value>
                    <fullName>A96</fullName>
                    <label>A96 - VIDAS 3 SOFTWARE</label>
                </value>
                <value>
                    <fullName>AA8</fullName>
                    <label>AA8 - FILMARRAY SOFTWARE</label>
                </value>
                <value>
                    <fullName>AA9</fullName>
                    <label>AA9 - EMAG SOFTWARE</label>
                </value>
                <value>
                    <fullName>B11</fullName>
                    <label>B11 - IMMUNO MICRO PLAQUES</label>
                </value>
                <value>
                    <fullName>B12</fullName>
                    <label>B12 - NUCLISENS (Without transfer)</label>
                </value>
                <value>
                    <fullName>B13</fullName>
                    <label>B13 - DGV</label>
                </value>
                <value>
                    <fullName>B14</fullName>
                    <label>B14 - BRAZIL CHEM HEMO MICROELISA</label>
                </value>
                <value>
                    <fullName>B15</fullName>
                    <label>B15 - BRAZIL IMMUNOSEROLOGY PRODUCTS</label>
                </value>
                <value>
                    <fullName>B16</fullName>
                    <label>B16 - PPM BRAZIL PRODUCTS</label>
                </value>
                <value>
                    <fullName>B18</fullName>
                    <label>B18 - BTA REAGENT CLINICAL USE</label>
                </value>
                <value>
                    <fullName>B19</fullName>
                    <label>B19 - BTA REAGENT INDUSTRIAL USE</label>
                </value>
                <value>
                    <fullName>B20</fullName>
                    <label>B20 - MB BACT REAGENT</label>
                </value>
                <value>
                    <fullName>B21</fullName>
                    <label>B21 - OBSOLETE  ELISA INDUSTRY</label>
                </value>
                <value>
                    <fullName>B22</fullName>
                    <label>B22 - VIKIA/BIONEXIA</label>
                </value>
                <value>
                    <fullName>B23</fullName>
                    <label>B23 - FOOD EXPERT</label>
                </value>
                <value>
                    <fullName>B24</fullName>
                    <label>B24 - ARGENTINA MICRO PLATES</label>
                </value>
                <value>
                    <fullName>B25</fullName>
                    <label>B25 - IMMUNO BMX MICROELISA</label>
                </value>
                <value>
                    <fullName>B26</fullName>
                    <label>B26 - IMMUNO OTHERS MICROELISA</label>
                </value>
                <value>
                    <fullName>B27</fullName>
                    <label>B27 - OBSOLETE IMMUNOASSAYS DURHAM</label>
                </value>
                <value>
                    <fullName>B28</fullName>
                    <label>B28 - OBSOLETE NUCLISENS ECL REAGENT</label>
                </value>
                <value>
                    <fullName>B29</fullName>
                    <label>B29 - NUCLISENS ISOLATION REAGENTS</label>
                </value>
                <value>
                    <fullName>B3</fullName>
                    <label>B3 - GEN PROBE</label>
                </value>
                <value>
                    <fullName>B30</fullName>
                    <label>B30 - NUCLISENS EASYQ REAGENTS</label>
                </value>
                <value>
                    <fullName>B31</fullName>
                    <label>B31 - APIWEB</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Categorie_c__c</fullName>
        <externalDeveloperName>Category__c</externalDeveloperName>
        <label>Category</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Category_c__c</fullName>
        <externalDeveloperName>Category__c</externalDeveloperName>
        <label>Category</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ClosedDate__c</fullName>
        <externalDeveloperName>ClosedDate</externalDeveloperName>
        <label>Closed Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ClosedDate_c__c</fullName>
        <externalDeveloperName>ClosedDate__c</externalDeveloperName>
        <inlineHelpText>Date of closure of the Case in SAP. It is applicable only to legacy Technical Complaints that were open in SAP before the CRM went live. It is also applicable to Commercial Complaint because these ones are created and managed only in SAP for Wave 4.</inlineHelpText>
        <label>SAP Closed Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ComplaintPurpose_c__c</fullName>
        <externalDeveloperName>ComplaintPurpose__c</externalDeveloperName>
        <inlineHelpText>[ Sofyen comment: Wave1+2 legacy field. I think it can be deleted. Check with integrations team ]</inlineHelpText>
        <label>Complaint Purpose</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ConfAnswerGivenToCustByLevel1_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>ConfAnswerGivenToCustByLevel1__c</externalDeveloperName>
        <inlineHelpText>TW field Auto-Checked by WF "ConfAnswerGivenToCustByLevel1"  Case is closed</inlineHelpText>
        <label>ConfAnswerGivenToCustByLevel1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ConnectionReceivedId__c</fullName>
        <externalDeveloperName>ConnectionReceivedId</externalDeveloperName>
        <label>Received Connection ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConnectionSentId__c</fullName>
        <externalDeveloperName>ConnectionSentId</externalDeveloperName>
        <label>Sent Connection ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactEmail__c</fullName>
        <externalDeveloperName>ContactEmail</externalDeveloperName>
        <label>Contact Email</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ContactEmail_c__c</fullName>
        <externalDeveloperName>ContactEmail__c</externalDeveloperName>
        <label>Contact Email</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ContactExtension_c__c</fullName>
        <externalDeveloperName>ContactExtension__c</externalDeveloperName>
        <label>Contact Extension</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ContactFax__c</fullName>
        <externalDeveloperName>ContactFax</externalDeveloperName>
        <label>Contact Fax</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ContactId__c</fullName>
        <externalDeveloperName>ContactId</externalDeveloperName>
        <label>Contact ID</label>
        <length>18</length>
        <referenceTo>Contact__x</referenceTo>
        <relationshipLabel>Case</relationshipLabel>
        <relationshipName>Case</relationshipName>
        <type>ExternalLookup</type>
    </fields>
    <fields>
        <fullName>ContactMobile__c</fullName>
        <externalDeveloperName>ContactMobile</externalDeveloperName>
        <label>Contact Mobile</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ContactNameForEmails_c__c</fullName>
        <externalDeveloperName>ContactNameForEmails__c</externalDeveloperName>
        <inlineHelpText>Technical field for Email templates where Contact Name is referenced, put format "Dear Mr John Smith" if Contact known otherwise leave it blank</inlineHelpText>
        <label>Contact Name for Emails</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ContactPhone__c</fullName>
        <externalDeveloperName>ContactPhone</externalDeveloperName>
        <label>Contact Phone</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Contact_Name_c__c</fullName>
        <externalDeveloperName>Contact_Name__c</externalDeveloperName>
        <label>Contact Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Context_c__c</fullName>
        <externalDeveloperName>Context__c</externalDeveloperName>
        <inlineHelpText>[ Sofyen comment: Wave1+2 legacy field. I think it can be deleted. Check with integrations team ]</inlineHelpText>
        <label>Context</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CountAER_ClosedDone_c__c</fullName>
        <externalDeveloperName>CountAER_ClosedDone__c</externalDeveloperName>
        <inlineHelpText>Tech field to count the number of Case's related AER with Adverse Event State"="Closed Done or Closed Canceled"
Utilised in WF "AER_CaseRE_No" to update Case RE=No if AER Decision=Not Reportable</inlineHelpText>
        <label>Count AER Closed Done</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CountAER_Local_Assessment_c__c</fullName>
        <externalDeveloperName>CountAER_Local_Assessment__c</externalDeveloperName>
        <inlineHelpText>Tech field to count the number of Case's related AER with "Adverse Event Decision / Answer"=Local Assessment
Used in WF "AER_CaseRE_No" to update Case RE=No</inlineHelpText>
        <label>Count AER Local Assessment</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CountAER_NotClosedDone_c__c</fullName>
        <externalDeveloperName>CountAER_NotClosedDone__c</externalDeveloperName>
        <inlineHelpText>Tech field to count the number of AER related with a Case, that are NOT in Status="Closed Done" (meaning these AER are Open).</inlineHelpText>
        <label>Count AER in Not "Closed Done"</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CountAER_NotReportable_c__c</fullName>
        <externalDeveloperName>CountAER_NotReportable__c</externalDeveloperName>
        <inlineHelpText>Tech field to count the number of Case's related AER with "Adverse Event Decision / Answer"=Not Reportable.
Utilised in WF "AER_CaseRE_No" to update Case RE=No if all AER State=Closed Done</inlineHelpText>
        <label>Count AER Not Reportable</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CountAER_Reportable_c__c</fullName>
        <externalDeveloperName>CountAER_Reportable__c</externalDeveloperName>
        <inlineHelpText>Tech field to count the number of Case's related AER with "Adverse Event Decision / Answer"=Reportable
Utilised in WF "AER_CaseRE_Yes" to update Case RE=Yes</inlineHelpText>
        <label>Count AER Reportable</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CountInvest_NotClosedDone_c__c</fullName>
        <externalDeveloperName>CountInvest_NotClosedDone__c</externalDeveloperName>
        <inlineHelpText>Tech field to count the number of INVESTIGATIONS related with a Case, that are NOT in Status="Closed Done" (meaning these Investigations are Open).</inlineHelpText>
        <label>Count Invest in Not "Closed"</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CountInvest_c__c</fullName>
        <externalDeveloperName>CountInvest__c</externalDeveloperName>
        <inlineHelpText>Tech field to count the number of INVESTIGATIONS related with a Case.</inlineHelpText>
        <label>Count Invest</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CountTimeSheetEntries_c__c</fullName>
        <externalDeveloperName>CountTimeSheetEntries__c</externalDeveloperName>
        <inlineHelpText>Count the number of Time Sheet Entries related to the Case. Needed because any type of Case cannot be closed if there are ZERO related Time Sheet Entry have been created.</inlineHelpText>
        <label>CountTimeSheetEntries</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CreatedById__c</fullName>
        <externalDeveloperName>CreatedById</externalDeveloperName>
        <label>Created By ID</label>
        <length>18</length>
        <referenceTo>User__x</referenceTo>
        <relationshipLabel>Case</relationshipLabel>
        <relationshipName>Case4</relationshipName>
        <type>ExternalLookup</type>
    </fields>
    <fields>
        <fullName>CreatedDate__c</fullName>
        <externalDeveloperName>CreatedDate</externalDeveloperName>
        <label>Created Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Created_By_Name_c__c</fullName>
        <externalDeveloperName>Created_By_Name__c</externalDeveloperName>
        <label>Created By Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreationDate_c__c</fullName>
        <externalDeveloperName>CreationDate__c</externalDeveloperName>
        <label>Creation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CreatorName_c__c</fullName>
        <externalDeveloperName>CreatorName__c</externalDeveloperName>
        <label>SAP Creator Name</label>
        <length>255</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CurrentLevel_c__c</fullName>
        <externalDeveloperName>CurrentLevel__c</externalDeveloperName>
        <inlineHelpText>Level to which the Case is currently assigned.</inlineHelpText>
        <label>Current Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Level 1</fullName>
                </value>
                <value>
                    <fullName>Level 2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CurrentStatusDateTime_c__c</fullName>
        <externalDeveloperName>CurrentStatusDateTime__c</externalDeveloperName>
        <label>Current Status DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CustomerContactDate_c__c</fullName>
        <externalDeveloperName>CustomerContactDate__c</externalDeveloperName>
        <label>Customer Contact Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CustomerNeeds_c__c</fullName>
        <externalDeveloperName>CustomerNeeds__c</externalDeveloperName>
        <inlineHelpText>[ Sofyen comment: Wave1+2 legacy field. I think it can be deleted. Check with integrations team ]</inlineHelpText>
        <label>Customer Needs</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DescriptionUpdate_c__c</fullName>
        <externalDeveloperName>DescriptionUpdate__c</externalDeveloperName>
        <inlineHelpText>Use this field to udpate the Case Description</inlineHelpText>
        <label>Description Update</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <externalDeveloperName>Description</externalDeveloperName>
        <inlineHelpText>Standard Description field is not used and hidden to all users. It is just used to capture Email2Case body. then WF "Case.DescriptionUpdate" copies it in the custom field Description__c. Purpose of Description__c: have a field &gt; 30K size for TW+SAP reason</inlineHelpText>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Description_c__c</fullName>
        <externalDeveloperName>Description__c</externalDeveloperName>
        <label>Long Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Dispatched_C030_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>Dispatched_C030__c</externalDeveloperName>
        <inlineHelpText>Does Action Code = NEED FSE TO REPAIR - C030</inlineHelpText>
        <label>Dispatched C030?</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Division_c__c</fullName>
        <externalDeveloperName>Division__c</externalDeveloperName>
        <label>Division</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DueDate_c__c</fullName>
        <externalDeveloperName>DueDate__c</externalDeveloperName>
        <label>Due Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DurationCurrentStatusCase_c__c</fullName>
        <externalDeveloperName>DurationCurrentStatusCase__c</externalDeveloperName>
        <inlineHelpText>For Reporting Only. Calculates the days between the current status date and today for cases</inlineHelpText>
        <label>Duration Current Status Case</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Email2CaseSenderFilter_c__c</fullName>
        <externalDeveloperName>Email2CaseSenderFilter__c</externalDeveloperName>
        <inlineHelpText>Select the Country or Department, it will show "Email2Case Sender" of that Country only</inlineHelpText>
        <label>Country/Department</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>GCS</fullName>
                </value>
                <value>
                    <fullName>CSI</fullName>
                </value>
                <value>
                    <fullName>AD</fullName>
                    <label>Andorra</label>
                </value>
                <value>
                    <fullName>AE</fullName>
                    <label>United Arab Emirates</label>
                </value>
                <value>
                    <fullName>AF</fullName>
                    <label>Afghanistan</label>
                </value>
                <value>
                    <fullName>AG</fullName>
                    <label>Antigua and Barbuda</label>
                </value>
                <value>
                    <fullName>AI</fullName>
                    <label>Anguilla</label>
                </value>
                <value>
                    <fullName>AL</fullName>
                    <label>Albania</label>
                </value>
                <value>
                    <fullName>AM</fullName>
                    <label>Armenia</label>
                </value>
                <value>
                    <fullName>AN</fullName>
                    <label>Dutch Antilles</label>
                </value>
                <value>
                    <fullName>AO</fullName>
                    <label>Angola</label>
                </value>
                <value>
                    <fullName>AQ</fullName>
                    <label>Antarctica</label>
                </value>
                <value>
                    <fullName>AR</fullName>
                    <label>Argentina</label>
                </value>
                <value>
                    <fullName>AS</fullName>
                    <label>Samoa, America</label>
                </value>
                <value>
                    <fullName>AT</fullName>
                    <label>Austria</label>
                </value>
                <value>
                    <fullName>AU</fullName>
                    <label>Australia</label>
                </value>
                <value>
                    <fullName>AW</fullName>
                    <label>Aruba</label>
                </value>
                <value>
                    <fullName>AX</fullName>
                    <label>Aland Islands</label>
                </value>
                <value>
                    <fullName>AZ</fullName>
                    <label>Azerbaijan</label>
                </value>
                <value>
                    <fullName>BA</fullName>
                    <label>Bosnia and Herzegovina</label>
                </value>
                <value>
                    <fullName>BB</fullName>
                    <label>Barbados</label>
                </value>
                <value>
                    <fullName>BD</fullName>
                    <label>Bangladesh</label>
                </value>
                <value>
                    <fullName>BE</fullName>
                    <label>Belgium</label>
                </value>
                <value>
                    <fullName>BF</fullName>
                    <label>Burkina Faso</label>
                </value>
                <value>
                    <fullName>BG</fullName>
                    <label>Bulgaria</label>
                </value>
                <value>
                    <fullName>BH</fullName>
                    <label>Bahrain</label>
                </value>
                <value>
                    <fullName>BI</fullName>
                    <label>Burundi</label>
                </value>
                <value>
                    <fullName>BJ</fullName>
                    <label>Benin</label>
                </value>
                <value>
                    <fullName>BL</fullName>
                    <label>Saint Barthélemy</label>
                </value>
                <value>
                    <fullName>BM</fullName>
                    <label>Bermuda</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>